<resources>
    <string name="app_name">BillAt</string>
    <string name="buy">Buy</string>
    <string name="dash">-</string>
    <string name="search">Search</string>
    <string name="where">Where?</string>
    <string name="from">From</string>
    <string name="train">Train</string>
    <string name="plane">Plane</string>
    <string name="bus">Bus</string>
    <string name="at">At</string>
    <string name="title">BillAt</string>
    <string name="pick_date">Pick Date</string>
    <string name="my_tickets">My Tickets</string>
    <string name="help">Help</string>
    <string name="my_account">My Account</string>
    <string name="icon">icon</string>
    <string name="price_turkish_lira">₺%s</string>
    <string name="trip_detail">TRIP DETAIL</string>
    <string name="pick_seat">Pick a seat</string>
    <string name="seat_option">Seat option</string>
    <string name="doesnt_matter">Doesn\'t matter</string>
    <string name="seat_number">Seat number</string>
    <string name="carrierLogo">carrierLogo</string>
    <string name="seat">SEAT</string>
    <string name="customer_s_photo">Customer\'s photo</string>
    <string name="where_do_you_want_to_go">Where do you\nwant to go?</string>
    <string name="change_sides">Change sides</string>
    <string name="to">To</string>
    <string name="departure_location">Departure Location</string>
    <string name="destination_location">Destination Location</string>
    <string name="dashes">--------------------------</string>
    <string name="bottom_navigation_icon">Botton navigation icon</string>
</resources>